# Content-Based-File-Organizer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.kiro/specs/content-based-file-organizer/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
config/: config.yaml
src/: __init__.py  config.py  file_monitor.py  file_organizer.py  file_processor.py  llm_service.py  text_extractor.py
tests/: __init__.py  test_config.py  test_file_monitor.py  test_file_monitor_logging_properties.py  test_file_monitor_properties.py  test_file_organizer.py  test_file_organizer_properties.py  test_file_processor.py  test_integration.py  test_llm_service.py  test_llm_service_properties.py  test_logging_properties.py  test_text_extractor.py  test_text_extractor_properties.py
